--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,15 @@
-﻿<Window x:Class="Warshamov.MainWindow"
+﻿<Window x:Class="Warshamov.MainWindow" MinHeight="250" MinWidth="300"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Name="btnCreate" Content="Encode" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="75" RenderTransformOrigin="1.473,9.166" Click="btnCreate_Click"/>
+        <ListBox Name="lstMattrix" Margin="10,10,10,121" RenderTransformOrigin="0.002,0.476"/>
+        <TextBox Name="tbInput" Height="23" Margin="10,0,103,65" TextWrapping="Wrap" VerticalAlignment="Bottom"/>
+        <TextBox Name="tbDmin" Height="23" Margin="10,0,113,37" TextWrapping="Wrap" VerticalAlignment="Bottom"/>
+        <TextBox Name="tbRes" Height="23" Margin="10,0,10,93" TextWrapping="Wrap" VerticalAlignment="Bottom"/>
+        <Label Content="Enter The Data" HorizontalAlignment="Right" Margin="0,0,10,62" VerticalAlignment="Bottom"/>
+        <Label Content="Enter D minimum" HorizontalAlignment="Right" Margin="0,0,10,34" VerticalAlignment="Bottom"/>
+
     </Grid>
 </Window>
